--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script type="module" crossorigin src="/assets/index-COype0JX.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-DDk2etqV.css">
+    <script type="module" crossorigin src="/static/assets/index-BK9roXjT.js"></script>
+    <link rel="stylesheet" crossorigin href="/static/assets/index-19AaTW_-.css">
   </head>
   <body>
     <div id="root"></div>
